--- a/pom.xml
+++ b/pom.xml
@@ -215,5 +215,12 @@
             <artifactId>allure-rest-assured</artifactId>
             <version>2.17.3</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-to-slf4j</artifactId>
+            <version>2.17.2</version>
+        </dependency>
+
     </dependencies>
 </project>
