updated framework - added allure report listener and json schema validator

--- a/pom.xml
+++ b/pom.xml
@@ -256,6 +256,12 @@
             <version>5.0.8</version>
         </dependency>
 
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>json-schema-validator</artifactId>
+            <version>4.3.3</version>
+        </dependency>
+
 
     </dependencies>
 </project>
