--- a/src/test/java/resources/properties/data.properties
+++ b/src/test/java/resources/properties/data.properties
@@ -5,6 +5,15 @@ tokenfile = src/test/java/resources/datasheets/token.csv
 itemdetails=src/test/java/resources/datasheets/itemPostDetails.csv
 updateitemdetails=src/test/java/resources/datasheets/itemUpdateDetails.csv
 tokenFile=src/test/java/resources/datasheets/token.csv
+getItemsSchema=src/test/resources/jsonSchema/getItemsSchema.json
+postItemsSchema=src/test/resources/jsonSchema/postItemsSchema.json
+getorderdetails_json=src/test/resources/jsonSchema/getorderdetailsbyid.json
+getorderstatus_json=src/test/resources/jsonSchema/getstatususingid.json
+create_user_schema = src/test/resources/jsonSchema/CreateUserSchema.json
+token_generate_schema =src/test/resources/jsonSchema/tokenSchema.json
+login_schema =src/test/resources/jsonSchema/login.json
+
+order_created=Order Created
 user_authorize= User Authorized
 getorders= List of Orders
 orderexists=OrderID exist
