Added OTP,Admin,Token Controllers

--- a/src/test/java/resources/properties/data.properties
+++ b/src/test/java/resources/properties/data.properties
@@ -1,7 +1,7 @@
 userdetails=src/test/java/resources/datasheets/userdetails.csv
 tokendetails=src/test/java/resources/datasheets/token.csv
-admindetails = src/test/java/resources/datasheets/admindetails.csv
-tokenfile = src/test/java/resources/datasheets/token.csv
+admindetails=src/test/java/resources/datasheets/admindetails.csv
+tokenfile=src/test/java/resources/datasheets/token.csv
 itemdetails=src/test/java/resources/datasheets/itemPostDetails.csv
 updateitemdetails=src/test/java/resources/datasheets/itemUpdateDetails.csv
 tokenFile=src/test/java/resources/datasheets/token.csv
@@ -9,26 +9,25 @@ getItemsSchema=src/test/resources/jsonSchema/getItemsSchema.json
 postItemsSchema=src/test/resources/jsonSchema/postItemsSchema.json
 getorderdetails_json=src/test/resources/jsonSchema/getorderdetailsbyid.json
 getorderstatus_json=src/test/resources/jsonSchema/getstatususingid.json
-create_user_schema = src/test/resources/jsonSchema/CreateUserSchema.json
-token_generate_schema =src/test/resources/jsonSchema/tokenSchema.json
-login_schema =src/test/resources/jsonSchema/login.json
-
+create_user_schema=src/test/resources/jsonSchema/CreateUserSchema.json
+token_generate_schema=src/test/resources/jsonSchema/tokenSchema.json
+login_schema=src/test/resources/jsonSchema/login.json
 order_created=Order Created
-user_authorize= User Authorized
-getorders= List of Orders
+user_authorize=User Authorized
+getorders=List of Orders
 orderexists=OrderID exist
 getstatus=Status of OrderID
 statusupdated=Order Status Updated!!
 cannot_cancel=Order cannot be cancelled now. Its too late.
 order_cancled=Order Successfully Cancelled
-status= status
-message= message
-admin_created = Admin Created
-admin_authorized = Admin Authorized
-send_otp = OTP sent Successfully
-check_email = Existing User. Please Verify.
-code_401 = 401
-code_200= 200
-code_406= 406
-code_201= 201
+status=status
+message=message
+admin_created=Admin Created
+admin_authorized=Admin Authorized
+send_otp=OTP sent Successfully
+check_email=Existing User. Please Verify.
+code_401=401
+code_200=200
+code_406=406
+code_201=201
 itemId=13
