--- a/src/test/java/resources/properties/global.properties
+++ b/src/test/java/resources/properties/global.properties
@@ -9,10 +9,10 @@ getPaidItems=/paiditems
 putAvailabilityStatus=/availableStatus/
 getEmployeeOrders=/employee/orders/
 createUser=/createUser
-SendOTP =/sendotp
-CheckEmail= /check-email
-VerifyPassword = /verifypassword
-CreateAdmin = /createAdmin
-LoginAdmin = /adminLogin
-PostToken = /token
-VerifyOTP = /verifyotp
+SendOTP=/sendotp
+CheckEmail=/check-email
+VerifyPassword=/verifypassword
+CreateAdmin=/createAdmin
+LoginAdmin=/adminLogin
+PostToken=/token
+VerifyOTP=/verifyotp
